--- a/wp-content/themes/drento/style.css
+++ b/wp-content/themes/drento/style.css
@@ -248,7 +248,7 @@ table {
 td,
 th {
 	padding: 0.3em;
-	border: 1px solid rgba(64, 64, 64, 0.1);
+	border: 0px solid white;
 }
 
 /*--------------------------------------------------------------
@@ -423,8 +423,11 @@ img {
 table {
 	margin: 0 0 1.5em;
 	width: 100%;
-	border: 1px solid rgba(64, 64, 64, 0.1);
+	border: 0px solid white;
 }
+
+
+
 
 .spaceLeft {
 	margin-left: 0.5em;
@@ -1051,7 +1054,7 @@ header.site-header {
 	position: relative;
 }
 .site-branding {
-	text-align: center;
+	text-align: left;
 	width: 100%;
 }
 .site-branding .site-title,
@@ -1072,7 +1075,7 @@ header.site-header {
 	font-weight: 300;
     font-size: 14px;
 	line-height: 1.5;
-    border-top: 3px solid #e2ae69;
+    border-top: 5px solid #e2ae69;
     display: inline-block;
     padding-top: 0.3em;
 	color: #b9b9b9;
